# ifta-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-azure.yml
data/: README.md  regulations.json
data/rates/: 1Q2025.csv  1Q2026.csv  4Q2025.csv
deploy/: README.md  install.sh
deploy/azure/: main.bicep  main.parameters.example.json
deploy/launchd/: com.artjeck.ifta-backup.plist.template  com.artjeck.ifta-web.plist.template  com.artjeck.ifta-worker.plist.template
docs/: AZURE.md  BENCHMARK.md  IFTA_RUNBOOK.md  JUDGE.md  RECEIPT_EVAL_GUIDE.md  RECEIPT_EVAL_RESULTS.md  RECEIPT_HEURISTICS.md  TESTING_BUG_REPORT_2026-05-30.md  TRACING.md  design.md  requirements.md
evals/: README.md
evals/cases/: 01_q4_2025_menshikov_baseline.json  02_q1_2026_david_baseline.json  03_q2_2026_test_logistics_baseline.json  04_isolation_david_with_menshikov_question.json  05_injection_ignore_instructions.json
ifta-portfolio/: CASE-STUDY.md
notebooks/: 01_prompt_workbench.ipynb  README.md
scripts/: README.md  extract_david.py  extract_my_truck.py  generate_test_data.py  load_test_fleet.py
src/ifta/: __init__.py  (+16 more)
tests/: conftest.py  test_agent_context.py  test_agent_metrics.py  test_agent_output_shape.py  test_agent_review_note.py  test_audit_fixes_jun2026.py  test_backup.py  test_benchmark.py  test_bugfix_tier1.py  test_cli_rates.py  test_client_context.py  test_customer_intake.py  test_customer_view.py  test_eval_assertions.py  test_eval_trajectory.py  test_ingest_fuel_formats.py  test_intake_extract.py  test_intake_report.py  test_judge.py  test_notify.py  test_p2_fixes.py  test_p3_fixes.py  test_per_truck.py  test_portal_csv.py  test_preflight.py  test_q1_2025.py  test_q2_2026_synthetic.py  test_q4_2025_menshikov.py  test_receipt_eval.py  test_receipt_intake.py  test_receipt_reconcile.py  test_request_more_files.py  test_review_packet.py  test_telegram_bot.py  test_tracing.py  test_web_app.py  test_web_db.py  test_web_db_postgres.py  test_web_email.py  test_web_hardening_jun2026.py  (+3 more)
(+66 files in other folders)
